# shushupe

./: .env.sample  .gitignore  LICENSE  README.md  config.sample.json  docker-compose.yml  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  secrets.sample.json  skills-lock.json  tailwind.config.js  tox.ini
api/: models.py  serializers.py  urls.py  views.py
bookmark/: admin.py  feeds.py  models.py  urls.py  views.py
bookmark/migrations/: 0001_initial.py  0002_rename_name_bookmark_title.py
bookmark/templates/bookmark/: base.html  bookmark_detail.html  bookmark_list.html  content_list.html  content_tabs.html  search_result.html  sidebar.html
bookmark/templatetags/: bookmark_extras.py
changelog/: admin.py  models.py  urls.py  views.py
changelog/migrations/: 0001_initial.py  0002_rename_name_changelog_title.py
changelog/templates/changelog/: changelog_list.html
core/: admin.py  entry.py  feeds.py  forms.py  models.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_bookmark.py  0003_auto_20201006_1702.py  0004_changelog.py  0005_auto_20210803_1340.py  0006_delete_changelog.py  0007_delete_bookmark.py  0008_delete_note.py  0009_auto_20220404_2156.py
core/templates/: 400.html  404.html  500.html
core/templates/core/: article_detail.html  article_list.html  base.html  base_blog.html  bookmark_detail.html  bookmark_list.html  changelog_list.html  footer.html  header.html  humans.txt  index.html  note_detail.html  note_list.html  page_detail.html  post_list.html  search_result.html  tag_list.html
core/templates/registration/: login.html
core/utils/: constants.py  markdown.py  my_secrets.py  post.py  shushupe.py  slug.py
gahd/: asgi.py  settings.py  urls.py  wsgi.py
gahd/assets/css/: tailwind.css
gahd/scss/: _ftw.scss  app.scss
gahd/settings/: common.py  dev.py  prod.py
gahd/static/css/: app.css  tailwind.min.css
gahd/static/js/: app.js
note/: admin.py  models.py  urls.py  views.py
note/migrations/: 0001_initial.py  0002_rename_name_note_title.py
note/templates/note/: base.html  note_detail.html  note_list.html
requirements/: common.txt  dev.txt  prod.txt
review/: admin.py  apps.py  feeds.py  image_specs.py  models.py  urls.py  views.py
review/migrations/: 0001_initial.py
review/templates/review/: base.html  review_detail.html  review_info_list.html  review_list.html
review/utils/: choices.py
shushupe/: asgi.py  urls.py  wsgi.py
shushupe/scss/: _bg-color.scss  _colors.scss  _fonts.scss  _ftw.scss  _text-color.scss  app.scss
shushupe/settings/: common.py  dev.py  prod.py
(+6 files in other folders)
