[tool.poetry]
name = "shushupe"
version = "1.0.0"
description = "Shushupe is a free and open source blogging platform."
homepage = "https://gahd.net/shushupe/"
authors = ["Gustavo Adolfo Huarcaya Delgado <diavolo@gahd.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.12"
djangorestframework = "^3.17.0"
drf-spectacular = "^0.29.0"
mistune = "^3.2.0"
pygments = "^2.19.2"
python-dotenv = "^1.2.2"
gunicorn = "^25.1.0"
sentry-sdk = "^2.55.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
nanoid = "^2.0.0"
html2text = "^2025.4.15"
beautifulsoup4 = "^4.14.3"
pillow = "^12.1.1"
django-imagekit = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pip-tools = "^7.5.3"
django-debug-toolbar = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
